ecmascript/parser/tests/test262-error-references/fail/fc75a023944da475.js.stderr
error: Expected {, got v
 --> $DIR/tests/test262-parser/fail/fc75a023944da475.js:1:23
  |
1 | x = { set method(val) v = val }
  |                       ^

